--- a/index.html
+++ b/index.html
@@ -34,3 +34,40 @@
   </footer>
 </body>
 </html>
+
+<h2>Recognition</h2>
+<p><strong>Date Agreed:</strong> August 6, 2025</p>
+
+<p>
+Corewell Health recognizes the Union as the exclusive bargaining representative for all full-time, part-time, casual, contingent, flex, and charge registered nurses at its hospital and facility locations listed below, covering matters such as wages, hours, and working conditions, excluding supervisors, guards, confidential, and other non-covered employees, as defined in NLRB Case No. 07-RC-351617.
+</p>
+
+<ul>
+  <li>Corewell Health William Beaumont University Hospital</li>
+  <li>Corewell Health Farmington Hills</li>
+  <li>Corewell Health Southfield Center</li>
+  <li>Corewell Health Beaumont Grosse Pointe</li>
+  <li>Corewell Health Beaumont Troy</li>
+  <li>Corewell Health Wayne</li>
+  <li>Corewell Health Taylor</li>
+  <li>Corewell Health Trenton</li>
+  <li>Corewell Health Dearborn</li>
+</ul>
+
+<hr />
+
+<h2>Union Representatives List</h2>
+<p><strong>Date Agreed:</strong> August 6, 2025</p>
+
+<p>
+The Union will provide Corewell Health a quarterly list of its stewards and representatives, including each person’s name, position, facility, shift, and department. Corewell Health is only required to recognize individuals listed on the current Union representative list.
+</p>
+
+<hr />
+
+<h2>Non-Discrimination</h2>
+<p><strong>Date Agreed:</strong> August 6, 2025</p>
+
+<p>
+Corewell Health and the Union agree not to discriminate or retaliate based on any legally protected characteristic including but not limited to race, color, disability, national origin, religion, age, sex, height, weight, marital status, sexual orientation, gender identity/expression. Team members are encouraged to report concerns through Corewell Health’s policy and may also pursue claims with external agencies consistent with applicable law. Such claims are not subject to the contract’s grievance or arbitration process.
+</p>
