--- a/index.html
+++ b/index.html
@@ -3,71 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Corewell–Teamsters Tentative Agreements</title>
+  <title>Tentative Agreements | Teamsters Local 2024</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>Tentative Agreements</h1>
-    <p>Corewell Health & Teamsters Local 2024</p>
-    <p><small>Last updated: August 7, 2025</small></p>
+    <div class="container">
+      <h1>Tentative Agreements</h1>
+      <p>Corewell Health & Teamsters Local 2024</p>
+      <small>Last updated: August 7, 2025</small>
+    </div>
   </header>
 
-  <main>
-    <nav>
-      <ul id="ta-list">
-        <li><a href="#" data-section="recognition">Recognition</a></li>
-        <li><a href="#" data-section="union-representatives-list">Union Representatives List</a></li>
-        <li><a href="#" data-section="non-discrimination">Non-Discrimination</a></li>
-        <!-- Add more here -->
-      </ul>
-    </nav>
+  <div class="container main">
+    <aside class="sidebar">
+      <nav>
+        <ul id="ta-list">
+          <li><a href="#" data-section="recognition">Recognition</a></li>
+          <li><a href="#" data-section="union-representatives-list">Union Representatives List</a></li>
+          <li><a href="#" data-section="non-discrimination">Non-Discrimination</a></li>
+        </ul>
+      </nav>
+    </aside>
 
     <section id="ta-content">
-      <p>Select a section to view the full tentative agreement.</p>
+      <p>Select a section from the left to view the full tentative agreement.</p>
     </section>
-  </main>
+  </div>
 
   <footer>
-    <p>Teamsters Local 2024 · This site tracks tentative agreements made between Teamsters Local 2024 and CHE.</p>
+    <div class="container">
+      <p>Teamsters Local 2024 · This site tracks tentative agreements made between Corewell Health and Teamsters Local 2024.</p>
+    </div>
   </footer>
 </body>
 </html>
-
-<h2>Recognition</h2>
-<p><strong>Date Agreed:</strong> August 6, 2025</p>
-
-<p>
-Corewell Health recognizes the Union as the exclusive bargaining representative for all full-time, part-time, casual, contingent, flex, and charge registered nurses at its hospital and facility locations listed below, covering matters such as wages, hours, and working conditions, excluding supervisors, guards, confidential, and other non-covered employees, as defined in NLRB Case No. 07-RC-351617.
-</p>
-
-<ul>
-  <li>Corewell Health William Beaumont University Hospital</li>
-  <li>Corewell Health Farmington Hills</li>
-  <li>Corewell Health Southfield Center</li>
-  <li>Corewell Health Beaumont Grosse Pointe</li>
-  <li>Corewell Health Beaumont Troy</li>
-  <li>Corewell Health Wayne</li>
-  <li>Corewell Health Taylor</li>
-  <li>Corewell Health Trenton</li>
-  <li>Corewell Health Dearborn</li>
-</ul>
-
-<hr />
-
-<h2>Union Representatives List</h2>
-<p><strong>Date Agreed:</strong> August 6, 2025</p>
-
-<p>
-The Union will provide Corewell Health a quarterly list of its stewards and representatives, including each person’s name, position, facility, shift, and department. Corewell Health is only required to recognize individuals listed on the current Union representative list.
-</p>
-
-<hr />
-
-<h2>Non-Discrimination</h2>
-<p><strong>Date Agreed:</strong> August 6, 2025</p>
-
-<p>
-Corewell Health and the Union agree not to discriminate or retaliate based on any legally protected characteristic including but not limited to race, color, disability, national origin, religion, age, sex, height, weight, marital status, sexual orientation, gender identity/expression. Team members are encouraged to report concerns through Corewell Health’s policy and may also pursue claims with external agencies consistent with applicable law. Such claims are not subject to the contract’s grievance or arbitration process.
-</p>
