--- a/index.html
+++ b/index.html
@@ -16,21 +16,18 @@
     </div>
   </header>
 
-  <div class="container main">
-    <aside class="sidebar">
-      <nav>
-        <ul id="ta-list">
-          <li><a href="#" data-section="recognition">Recognition</a></li>
-          <li><a href="#" data-section="union-representatives-list">Union Representatives List</a></li>
-          <li><a href="#" data-section="non-discrimination">Non-Discrimination</a></li>
-        </ul>
-      </nav>
-    </aside>
+  <main class="container">
+    <div id="button-list">
+      <button data-section="recognition">Recognition</button>
+      <button data-section="union-representatives-list">Union Representatives List</button>
+      <button data-section="non-discrimination">Non-Discrimination</button>
+      <!-- Add more buttons here -->
+    </div>
 
     <section id="ta-content">
-      <p>Select a section from the left to view the full tentative agreement.</p>
+      <!-- Loaded TA will appear here -->
     </section>
-  </div>
+  </main>
 
   <footer>
     <div class="container">
