--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <section id="ta-content">
-      <!-- Loaded TA will appear here -->
+      <!-- Agreement content will load here when a button is clicked -->
     </section>
   </main>
 
@@ -36,26 +36,3 @@
   </footer>
 </body>
 </html>
-
-<h2>Recognition</h2>
-<p><strong>Date Agreed:</strong> August 6, 2025</p>
-<p><strong>Status:</strong> ✅ Tentatively Agreed</p>
-
-<div class="ta-box">
-  <p>
-    Corewell Health recognizes the Union as the exclusive bargaining representative for all full-time, part-time, casual, contingent, flex, and charge registered nurses at its hospital and facility locations listed below, covering matters such as wages, hours, and working conditions, excluding supervisors, guards, confidential, and other non-covered employees, as defined in NLRB Case No. 07-RC-351617.
-  </p>
-
-  <ul>
-    <li>Corewell Health William Beaumont University Hospital</li>
-    <li>Corewell Health Farmington Hills</li>
-    <li>Corewell Health Southfield Center</li>
-    <li>Corewell Health Beaumont Grosse Pointe</li>
-    <li>Corewell Health Beaumont Troy</li>
-    <li>Corewell Health Wayne</li>
-    <li>Corewell Health Taylor</li>
-    <li>Corewell Health Trenton</li>
-    <li>Corewell Health Dearborn</li>
-  </ul>
-</div>
-
