--- a/sections/recognition.html
+++ b/sections/recognition.html
@@ -1,6 +1,6 @@
 <h2>Recognition</h2>
 <p><strong>Date Agreed:</strong> August 6, 2025</p>
-<p><strong>Status:</strong> ✅ Tentatively Agreed</p>
+<p><strong>Status:</strong> Tentatively Agreed</p>
 
 <div class="ta-box">
   <p>
