--- a/sections/union-representatives-list.html
+++ b/sections/union-representatives-list.html
@@ -1,4 +1,4 @@
-<h2>✅ Union Representatives List</h2>
+<h2>Union Representatives List</h2>
 <p><strong>Date Agreed:</strong> August 6, 2025</p>
 <p><strong>Status:</strong> Tentatively Agreed</p>
 
