--- a/sections/recognition.html
+++ b/sections/recognition.html
@@ -4,6 +4,18 @@
 
 <div class="ta-box">
   <p>
-   The Union will provide Corewell Health a quarterly list of its stewards and representatives, including each person’s name, position, facility, shift, and department. Corewell Health is only required to recognize individuals listed on the current Union representative list.
+    Corewell Health recognizes the Union as the exclusive bargaining representative for all full-time, part-time, casual, contingent, flex, and charge registered nurses at its hospital and facility locations listed below, covering matters such as wages, hours, and working conditions, excluding supervisors, guards, confidential, and other non-covered employees, as defined in NLRB Case No. 07-RC-351617.
+  </p>
+
+  <ul>
+    <li>Corewell Health William Beaumont University Hospital</li>
+    <li>Corewell Health Farmington Hills</li>
+    <li>Corewell Health Southfield Center</li>
+    <li>Corewell Health Beaumont Grosse Pointe</li>
+    <li>Corewell Health Beaumont Troy</li>
+    <li>Corewell Health Wayne</li>
+    <li>Corewell Health Taylor</li>
+    <li>Corewell Health Trenton</li>
+    <li>Corewell Health Dearborn</li>
   </ul>
 </div>
