--- a/sections/recognition.html
+++ b/sections/recognition.html
@@ -1,21 +1,27 @@
-<h2>Recognition</h2>
-<p><strong>Date Agreed:</strong> August 6, 2025</p>
-<p><strong>Status:</strong> Tentatively Agreed</p>
+<div class="ta-article">
+  <div class="ta-header">
+    <h2>Recognition</h2>
+    <div class="ta-meta">
+      <span>Tentatively Agreed</span>
+      <span>Agreed on: August 6, 2025</span>
+    </div>
+  </div>
 
-<div class="ta-box">
-  <p>
-    Corewell Health recognizes the Union as the exclusive bargaining representative for all full-time, part-time, casual, contingent, flex, and charge registered nurses at its hospital and facility locations listed below, covering matters such as wages, hours, and working conditions, excluding supervisors, guards, confidential, and other non-covered employees, as defined in NLRB Case No. 07-RC-351617.
-  </p>
+  <div class="ta-content">
+    <p>
+      Corewell Health recognizes the Union as the exclusive bargaining representative for all full-time, part-time, casual, contingent, flex, and charge registered nurses at its hospital and facility locations listed below, covering matters such as wages, hours, and working conditions, excluding supervisors, guards, confidential, and other non-covered employees, as defined in NLRB Case No. 07-RC-351617.
+    </p>
 
-  <ul>
-    <li>Corewell Health William Beaumont University Hospital</li>
-    <li>Corewell Health Farmington Hills</li>
-    <li>Corewell Health Southfield Center</li>
-    <li>Corewell Health Beaumont Grosse Pointe</li>
-    <li>Corewell Health Beaumont Troy</li>
-    <li>Corewell Health Wayne</li>
-    <li>Corewell Health Taylor</li>
-    <li>Corewell Health Trenton</li>
-    <li>Corewell Health Dearborn</li>
-  </ul>
+    <ul>
+      <li>Corewell Health William Beaumont University Hospital</li>
+      <li>Corewell Health Farmington Hills</li>
+      <li>Corewell Health Southfield Center</li>
+      <li>Corewell Health Beaumont Grosse Pointe</li>
+      <li>Corewell Health Beaumont Troy</li>
+      <li>Corewell Health Wayne</li>
+      <li>Corewell Health Taylor</li>
+      <li>Corewell Health Trenton</li>
+      <li>Corewell Health Dearborn</li>
+    </ul>
+  </div>
 </div>
