--- a/sections/union-representatives-list.html
+++ b/sections/union-representatives-list.html
@@ -1,9 +1,12 @@
-<h2>Union Representatives List</h2>
-<p><strong>Date Agreed:</strong> August 6, 2025</p>
-<p><strong>Status:</strong> Tentatively Agreed</p>
+<div class="ta-article">
+  <div class="ta-header">
+    <h2>Union Representatives List</h2>
+    <div class="ta-meta">
+      <span>Agreed on: August 6, 2025</span>
+    </div>
+  </div>
 
-<div class="ta-box">
-  <p>
+  <div class="ta-content">
+    <p>
 The Union will provide Corewell Health a quarterly list of its stewards and representatives, including each person’s name, position, facility, shift, and department. Corewell Health is only required to recognize individuals listed on the current Union representative list.
-  </ul>
-</div>
+    </p>
