--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
   <main class="container">
     <div id="button-list">
-      <button data-section="recognition">Recognition</button>
-      <button data-section="union-representatives-list">Union Representatives List</button>
-      <button data-section="non-discrimination">Non-Discrimination</button>
+      <button data-section="recognition">✅ Recognition</button>
+      <button data-section="union-representatives-list">✅ Union Representatives List</button>
+      <button data-section="non-discrimination">✅ Non-Discrimination</button>
       <!-- Add more buttons here -->
     </div>
 
