--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   <script src="app.js" defer></script>
 </head>
 <body>
-  <header>
-    <div class="container">
+<header>
+  <div class="container header-flex">
+    <img src="logo.png" alt="Teamsters Logo" class="logo" />
+    <div class="site-info">
       <h1>Tentative Agreements</h1>
       <p>Corewell Health & Teamsters Local 2024</p>
       <small>Last updated: August 7, 2025</small>
     </div>
-  </header>
+  </div>
+</header>
 
   <main class="container">
     <div id="button-list">
