--- a/index.html
+++ b/index.html
@@ -39,3 +39,21 @@
   </footer>
 </body>
 </html>
+<section id="negotiation-updates">
+  <h2>Negotiation Updates</h2>
+
+  <details>
+    <summary>August 7, 2025</summary>
+    <img src="update1.png" alt="Negotiation Update 1" />
+  </details>
+
+  <details>
+    <summary>August 5, 2025</summary>
+    <img src="update2.png" alt="Negotiation Update 2" />
+  </details>
+
+  <details>
+    <summary>August 1, 2025</summary>
+    <img src="update3.png" alt="Negotiation Update 3" />
+  </details>
+</section>
