--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
 </header>
 
   <main class="container">
-    <div id="button-list">
-      <button data-section="recognition">✅ Recognition</button>
-      <button data-section="union-representatives-list">✅ Union Representatives List</button>
-      <button data-section="non-discrimination">✅ Non-Discrimination</button>
-      <!-- Add more buttons here -->
-    </div>
+<details id="ta-dropdown" open>
+  <summary>Tentative Agreements</summary>
+  <div id="button-list">
+    <button data-section="recognition">Recognition</button>
+    <button data-section="union-representatives-list">Union Representatives List</button>
+    <button data-section="non-discrimination">Non-Discrimination</button>
+    <!-- Add more buttons as needed -->
+  </div>
+</details>
 
     <section id="ta-content">
       <!-- Agreement content will load here when a button is clicked -->
