--- a/index.html
+++ b/index.html
@@ -19,16 +19,20 @@
   </div>
 </header>
 
-  <main class="container">
-<details id="ta-dropdown" open>
-  <summary>Tentative Agreements</summary>
-  <div id="button-list">
-    <button data-section="recognition">Recognition</button>
-    <button data-section="union-representatives-list">Union Representatives List</button>
-    <button data-section="non-discrimination">Non-Discrimination</button>
-    <!-- Add more buttons as needed -->
-  </div>
-</details>
+<section id="tentative-agreements">
+  <details id="ta-dropdown">
+    <summary>
+      Tentative Agreements
+      <span class="dropdown-icon">▼</span>
+    </summary>
+    <div id="button-list">
+      <button data-section="recognition">Recognition</button>
+      <button data-section="union-representatives-list">Union Representatives List</button>
+      <button data-section="non-discrimination">Non-Discrimination</button>
+      <!-- Add more buttons here -->
+    </div>
+  </details>
+</section>
 
     <section id="ta-content">
       <!-- Agreement content will load here when a button is clicked -->
