--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 </header>
 
 <section id="tentative-agreements">
-  <details id="ta-dropdown">
+  <details id="ta-dropdown" open>
     <summary>
       Tentative Agreements
-      <span class="dropdown-icon"></span>
+      <span class="dropdown-icon">▼</span>
     </summary>
     <div id="button-list">
-      <button data-section="recognition">✅ Recognition</button>
-      <button data-section="union-representatives-list">✅ Union Representatives List</button>
-      <button data-section="non-discrimination">✅ Non-Discrimination</button>
+      <button data-section="recognition">Recognition</button>
+      <button data-section="union-representatives-list">Union Representatives List</button>
+      <button data-section="non-discrimination">Non-Discrimination</button>
       <!-- Add more buttons here -->
     </div>
   </details>
