--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <details id="ta-dropdown" open>
     <summary>
       Tentative Agreements
-      <span class="dropdown-icon">▼</span>
+      <span class="dropdown-icon"></span>
     </summary>
     <div id="button-list">
       <button data-section="recognition">✅ Recognition</button>
