--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="logo.png" alt="Teamsters Logo" class="logo" />
         <div class="site-info">
           <h1>Tentative Agreements</h1>
-          <p>Corewell Health & Teamsters Local 2024</p>
+          <p>Corewell Health East & Teamsters Local 2024 Negotiations</p>
           <small>Last updated: August 7, 2025</small>
         </div>
       </div>
@@ -63,7 +63,7 @@
 
   <footer>
     <div class="container">
-      <p>Teamsters Local 2024 · This site tracks tentative agreements made between Corewell Health and Teamsters Local 2024.</p>
+      <p>Teamsters Local 2024 · This site tracks tentative agreements made between Corewell Health East and Teamsters Local 2024.</p>
     </div>
   </footer>
 </body>
