--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="logo.png" alt="Teamsters Logo" class="logo" />
         <div class="site-info">
           <h1>Tentative Agreements</h1>
-          <p>Corewell Health East & Teamsters Local 2024 Negotiations</p>
+          <p>Corewell Health East & Teamsters Local 2024</p>
           <small>Last updated: August 7, 2025</small>
         </div>
       </div>
