--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <footer>
     <div class="container">
-      <p>Teamsters Local 2024 · This site tracks tentative agreements made between Corewell Health East and Teamsters Local 2024.</p>
+      <p>Teamsters Local 2024 · This site tracks tentative agreements and negotiation updates made between Corewell Health East and Teamsters Local 2024.</p>
     </div>
   </footer>
 </body>
