--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="site-info">
           <h1>Tentative Agreements</h1>
           <p>Corewell Health East & Teamsters Local 2024</p>
-          <small>Last updated: August 7, 2025</small>
+          <small><strong>Last updated:</strong>August 7, 2025</small>
         </div>
       </div>
     </header>
