--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
       <section id="tentative-agreements">
-        <details id="ta-dropdown" open>
+        <details id="ta-dropdown" closed>
           <summary>
             Tentative Agreements
             <span class="dropdown-icon"></span>
