--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
       <section id="negotiation-updates">
         <h2>Negotiation Updates</h2>
 
-        <details>
-          <summary>June 24, 2025</summary>
-          <img src="update1.png" alt="Negotiation Update 1" />
-        </details>
+<details>
+  <summary>June 24, 2025</summary>
+  <a href="update1.png" target="_blank">
+    <img src="update1.png" alt="Negotiation Update 1" />
+  </a>
+</details>
 
         <details>
           <summary>July 23-24, 2025</summary>
