--- a/index.html
+++ b/index.html
@@ -49,18 +49,20 @@
     <img src="update1.png" alt="Negotiation Update 1" />
   </a>
 </details>
+        
+<details>
+  <summary>July 23-24, 2025</summary>
+  <a href="update2.png" target="_blank">
+    <img src="update2.png" alt="Negotiation Update 2" />
+  </a>
+</details>
 
-        <details>
-          <summary>July 23-24, 2025</summary>
-          <img src="update2.png" alt="Negotiation Update 2" />
-        </details>
-
-        <details>
-          <summary>August 6, 2025</summary>
-          <img src="update3.png" alt="Negotiation Update 3" />
-        </details>
-      </section>
-    </main>
+<details>
+  <summary>August 6, 2025</summary>
+  <a href="update3.png" target="_blank">
+    <img src="update3.png" alt="Negotiation Update 3" />
+  </a>
+</details>
   </div>
 
   <footer>
