--- a/index.html
+++ b/index.html
@@ -64,7 +64,21 @@
   </a>
 </details>
   </div>
+<section id="faq-section">
+  <h2>Frequently Asked Questions</h2>
 
+  <details>
+    <summary>What is a Tentative Agreement?</summary>
+    <p>A Tentative Agreement (TA) is a proposed contract clause that both the union and the employer have agreed on but is not yet ratified by the union membership.</p>
+  </details>
+
+  <details>
+    <summary>When is the final contract vote?</summary>
+    <p>The ratification vote will be scheduled after all sections have been tentatively agreed to. Updates will be shared as soon as that happens.</p>
+  </details>
+
+  <!-- Add more FAQs as needed -->
+</section>
   <footer>
     <div class="container">
       <p>Teamsters Local 2024 · This site tracks tentative agreements and negotiation updates made between Corewell Health East and Teamsters Local 2024.</p>
