--- a/index.html
+++ b/index.html
@@ -20,25 +20,52 @@
       </div>
     </header>
 
-    <main>
-      <section id="tentative-agreements">
-        <details id="ta-dropdown" closed>
-          <summary>
-            Tentative Agreements
-            <span class="dropdown-icon"></span>
-          </summary>
-          <div id="button-list">
-            <button data-section="recognition">✅ Recognition</button>
-            <button data-section="union-representatives-list">✅ Union Representatives List</button>
-            <button data-section="non-discrimination">✅ Non-Discrimination</button>
-            <!-- Add more buttons here -->
-          </div>
-        </details>
-      </section>
+<section id="tentative-agreements">
+  <h2 class="ta-title">Tentative Agreements</h2>
 
-      <section id="ta-content">
-        <!-- Agreement content will load here when a button is clicked -->
-      </section>
+  <details open>
+    <summary>✅ Non-Discrimination</summary>
+    <div class="ta-box">
+      <p><strong>Agreed on:</strong> August 6, 2025</p>
+      <p>
+        Corewell Health and the Union agree not to discriminate or retaliate based on any legally protected characteristic including but not limited to race, color, disability, national origin, religion, age, sex, height, weight, marital status, sexual orientation, gender identity/expression. Team members are encouraged to report concerns through Corewell Health’s policy and may also pursue claims with external agencies consistent with applicable law. Such claims are not subject to the contract’s grievance or arbitration process.
+      </p>
+    </div>
+  </details>
+
+  <details>
+    <summary>✅ Recognition</summary>
+    <div class="ta-box">
+      <p><strong>Agreed on:</strong> August 6, 2025</p>
+      <p>
+        Corewell Health recognizes the Union as the exclusive bargaining representative for all full-time, part-time, casual, contingent, flex, and charge registered nurses at its hospital and facility locations listed below, covering matters such as wages, hours, and working conditions, excluding supervisors, guards, confidential, and other non-covered employees, as defined in NLRB Case No. 07-RC-351617.
+      </p>
+
+      <ul>
+        <li>Corewell Health William Beaumont University Hospital</li>
+        <li>Corewell Health Farmington Hills</li>
+        <li>Corewell Health Southfield Center</li>
+        <li>Corewell Health Beaumont Grosse Pointe</li>
+        <li>Corewell Health Beaumont Troy</li>
+        <li>Corewell Health Wayne</li>
+        <li>Corewell Health Taylor</li>
+        <li>Corewell Health Trenton</li>
+        <li>Corewell Health Dearborn</li>
+      </ul>
+    </div>
+  </details>
+
+  <details>
+    <summary>✅ Union Representatives List</summary>
+    <div class="ta-box">
+      <p><strong>Agreed on:</strong> August 6, 2025</p>
+      <p>
+        The Union will provide Corewell Health a quarterly list of its stewards and representatives, including each person’s name, position, facility, shift, and department. Corewell Health is only required to recognize individuals listed on the current Union representative list.
+      </p>
+    </div>
+  </details>
+
+</section>
 
       <section id="negotiation-updates">
         <h2>Negotiation Updates</h2>
