--- a/index.html
+++ b/index.html
@@ -20,108 +20,109 @@
       </div>
     </header>
 
-<section id="tentative-agreements">
-  <h2 class="ta-title">Tentative Agreements</h2>
+    <main>
+      <section id="tentative-agreements">
+        <h2 class="ta-title">Tentative Agreements</h2>
 
-  <div class="ta-article">
-    <div class="ta-header">
-      <h3>✅ Non-Discrimination</h3>
-      <div class="ta-meta">
-        <span>Agreed on: August 6, 2025</span>
-      </div>
-    </div>
-    <div class="ta-content">
-      <p>
-        Corewell Health and the Union agree not to discriminate or retaliate based on any legally protected characteristic including but not limited to race, color, disability, national origin, religion, age, sex, height, weight, marital status, sexual orientation, gender identity/expression. Team members are encouraged to report concerns through Corewell Health’s policy and may also pursue claims with external agencies consistent with applicable law. Such claims are not subject to the contract’s grievance or arbitration process.
-      </p>
-    </div>
-  </div>
+        <div class="ta-article">
+          <div class="ta-header">
+            <h3>✅ Non-Discrimination</h3>
+            <div class="ta-meta">
+              <span>Agreed on: August 6, 2025</span>
+            </div>
+          </div>
+          <div class="ta-content">
+            <p>
+              Corewell Health and the Union agree not to discriminate or retaliate based on any legally protected characteristic including but not limited to race, color, disability, national origin, religion, age, sex, height, weight, marital status, sexual orientation, gender identity/expression. Team members are encouraged to report concerns through Corewell Health’s policy and may also pursue claims with external agencies consistent with applicable law. Such claims are not subject to the contract’s grievance or arbitration process.
+            </p>
+          </div>
+        </div>
 
-  <div class="ta-article">
-    <div class="ta-header">
-      <h3>✅ Recognition</h3>
-      <div class="ta-meta">
-        <span>Agreed on: August 6, 2025</span>
-      </div>
-    </div>
-    <div class="ta-content">
-      <p>
-        Corewell Health recognizes the Union as the exclusive bargaining representative for all full-time, part-time, casual, contingent, flex, and charge registered nurses at its hospital and facility locations listed below, covering matters such as wages, hours, and working conditions, excluding supervisors, guards, confidential, and other non-covered employees, as defined in NLRB Case No. 07-RC-351617.
-      </p>
-      <ul>
-        <li>Corewell Health William Beaumont University Hospital</li>
-        <li>Corewell Health Farmington Hills</li>
-        <li>Corewell Health Southfield Center</li>
-        <li>Corewell Health Beaumont Grosse Pointe</li>
-        <li>Corewell Health Beaumont Troy</li>
-        <li>Corewell Health Wayne</li>
-        <li>Corewell Health Taylor</li>
-        <li>Corewell Health Trenton</li>
-        <li>Corewell Health Dearborn</li>
-      </ul>
-    </div>
-  </div>
+        <div class="ta-article">
+          <div class="ta-header">
+            <h3>✅ Recognition</h3>
+            <div class="ta-meta">
+              <span>Agreed on: August 6, 2025</span>
+            </div>
+          </div>
+          <div class="ta-content">
+            <p>
+              Corewell Health recognizes the Union as the exclusive bargaining representative for all full-time, part-time, casual, contingent, flex, and charge registered nurses at its hospital and facility locations listed below, covering matters such as wages, hours, and working conditions, excluding supervisors, guards, confidential, and other non-covered employees, as defined in NLRB Case No. 07-RC-351617.
+            </p>
+            <ul>
+              <li>Corewell Health William Beaumont University Hospital</li>
+              <li>Corewell Health Farmington Hills</li>
+              <li>Corewell Health Southfield Center</li>
+              <li>Corewell Health Beaumont Grosse Pointe</li>
+              <li>Corewell Health Beaumont Troy</li>
+              <li>Corewell Health Wayne</li>
+              <li>Corewell Health Taylor</li>
+              <li>Corewell Health Trenton</li>
+              <li>Corewell Health Dearborn</li>
+            </ul>
+          </div>
+        </div>
 
-  <div class="ta-article">
-    <div class="ta-header">
-      <h3>✅ Union Representatives List</h3>
-      <div class="ta-meta">
-        <span>Agreed on: August 6, 2025</span>
-      </div>
-    </div>
-    <div class="ta-content">
-      <p>
-        The Union will provide Corewell Health a quarterly list of its stewards and representatives, including each person’s name, position, facility, shift, and department. Corewell Health is only required to recognize individuals listed on the current Union representative list.
-      </p>
-    </div>
-  </div>
-</section>
-
-</section>
+        <div class="ta-article">
+          <div class="ta-header">
+            <h3>✅ Union Representatives List</h3>
+            <div class="ta-meta">
+              <span>Agreed on: August 6, 2025</span>
+            </div>
+          </div>
+          <div class="ta-content">
+            <p>
+              The Union will provide Corewell Health a quarterly list of its stewards and representatives, including each person’s name, position, facility, shift, and department. Corewell Health is only required to recognize individuals listed on the current Union representative list.
+            </p>
+          </div>
+        </div>
+      </section>
 
       <section id="negotiation-updates">
         <h2>Negotiation Updates</h2>
 
-<details>
-  <summary>June 24, 2025</summary>
-  <a href="update1.png" target="_blank">
-    <img src="update1.png" alt="Negotiation Update 1" />
-  </a>
-</details>
-        
-<details>
-  <summary>July 23-24, 2025</summary>
-  <a href="update2.png" target="_blank">
-    <img src="update2.png" alt="Negotiation Update 2" />
-  </a>
-</details>
+        <details>
+          <summary>June 24, 2025</summary>
+          <a href="update1.png" target="_blank">
+            <img src="update1.png" alt="Negotiation Update 1" />
+          </a>
+        </details>
 
-<details>
-  <summary>August 6, 2025</summary>
-  <a href="update3.png" target="_blank">
-    <img src="update3.png" alt="Negotiation Update 3" />
-  </a>
-</details>
+        <details>
+          <summary>July 23-24, 2025</summary>
+          <a href="update2.png" target="_blank">
+            <img src="update2.png" alt="Negotiation Update 2" />
+          </a>
+        </details>
+
+        <details>
+          <summary>August 6, 2025</summary>
+          <a href="update3.png" target="_blank">
+            <img src="update3.png" alt="Negotiation Update 3" />
+          </a>
+        </details>
+      </section>
+
+      <section id="faq-section">
+        <h2>Frequently Asked Questions</h2>
+
+        <details>
+          <summary>What is a Tentative Agreement?</summary>
+          <p>A Tentative Agreement (TA) is a proposed contract clause that both the union and the employer have agreed on but is not yet ratified by the union membership.</p>
+        </details>
+
+        <details>
+          <summary>When is the final contract vote?</summary>
+          <p>The ratification vote will be scheduled after all sections have been tentatively agreed to. Updates will be shared as soon as that happens.</p>
+        </details>
+      </section>
+    </main>
+
+    <footer>
+      <div class="container">
+        <p>Teamsters Local 2024 · This site tracks tentative agreements and negotiation updates made between Corewell Health East and Teamsters Local 2024.</p>
+      </div>
+    </footer>
   </div>
-<section id="faq-section">
-  <h2>Frequently Asked Questions</h2>
-
-  <details>
-    <summary>What is a Tentative Agreement?</summary>
-    <p>A Tentative Agreement (TA) is a proposed contract clause that both the union and the employer have agreed on but is not yet ratified by the union membership.</p>
-  </details>
-
-  <details>
-    <summary>When is the final contract vote?</summary>
-    <p>The ratification vote will be scheduled after all sections have been tentatively agreed to. Updates will be shared as soon as that happens.</p>
-  </details>
-
-  <!-- Add more FAQs as needed -->
-</section>
-  <footer>
-    <div class="container">
-      <p>Teamsters Local 2024 · This site tracks tentative agreements and negotiation updates made between Corewell Health East and Teamsters Local 2024.</p>
-    </div>
-  </footer>
 </body>
 </html>
