--- a/index.html
+++ b/index.html
@@ -20,34 +20,30 @@
       </div>
     </header>
 
-<section id="tentative-agreements">
-  <h2 class="ta-title">Tentative Agreements</h2>
+<details id="tentative-agreements" open>
+  <summary class="ta-title">Tentative Agreements</summary>
 
-  <details class="ta-article">
-    <summary>
-      <div class="ta-header">
-        <h3>✅ Non-Discrimination</h3>
-        <div class="ta-meta">
-          <span>Agreed on: August 6, 2025</span>
-        </div>
+  <div class="ta-article">
+    <div class="ta-header">
+      <h3>✅ Non-Discrimination</h3>
+      <div class="ta-meta">
+        <span>Agreed on: August 6, 2025</span>
       </div>
-    </summary>
+    </div>
     <div class="ta-content">
       <p>
         Corewell Health and the Union agree not to discriminate or retaliate based on any legally protected characteristic including but not limited to race, color, disability, national origin, religion, age, sex, height, weight, marital status, sexual orientation, gender identity/expression. Team members are encouraged to report concerns through Corewell Health’s policy and may also pursue claims with external agencies consistent with applicable law. Such claims are not subject to the contract’s grievance or arbitration process.
       </p>
     </div>
-  </details>
+  </div>
 
-  <details class="ta-article">
-    <summary>
-      <div class="ta-header">
-        <h3>✅ Recognition</h3>
-        <div class="ta-meta">
-          <span>Agreed on: August 6, 2025</span>
-        </div>
+  <div class="ta-article">
+    <div class="ta-header">
+      <h3>✅ Recognition</h3>
+      <div class="ta-meta">
+        <span>Agreed on: August 6, 2025</span>
       </div>
-    </summary>
+    </div>
     <div class="ta-content">
       <p>
         Corewell Health recognizes the Union as the exclusive bargaining representative for all full-time, part-time, casual, contingent, flex, and charge registered nurses at its hospital and facility locations listed below, covering matters such as wages, hours, and working conditions, excluding supervisors, guards, confidential, and other non-covered employees, as defined in NLRB Case No. 07-RC-351617.
@@ -64,24 +60,23 @@
         <li>Corewell Health Dearborn</li>
       </ul>
     </div>
-  </details>
+  </div>
 
-  <details class="ta-article">
-    <summary>
-      <div class="ta-header">
-        <h3>✅ Union Representatives List</h3>
-        <div class="ta-meta">
-          <span>Agreed on: August 6, 2025</span>
-        </div>
+  <div class="ta-article">
+    <div class="ta-header">
+      <h3>✅ Union Representatives List</h3>
+      <div class="ta-meta">
+        <span>Agreed on: August 6, 2025</span>
       </div>
-    </summary>
+    </div>
     <div class="ta-content">
       <p>
         The Union will provide Corewell Health a quarterly list of its stewards and representatives, including each person’s name, position, facility, shift, and department. Corewell Health is only required to recognize individuals listed on the current Union representative list.
       </p>
     </div>
-  </details>
-</section>
+  </div>
+
+</details>
 
       <section id="negotiation-updates">
         <h2>Negotiation Updates</h2>
