--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </header>
 
-<details id="tentative-agreements" open>
+<details id="tentative-agreements" closed>
   <summary class="ta-title">Tentative Agreements</summary>
 
   <div class="ta-article">
