--- a/index.html
+++ b/index.html
@@ -78,29 +78,30 @@
 
 </details>
 
-      <section id="negotiation-updates">
-        <h2>Negotiation Updates</h2>
+  <section id="negotiation-updates">
+  <h2>Negotiation Updates</h2>
 
-     <details>
-     <details>
-          <summary>August 6, 2025</summary>
-          <a href="update3.png" target="_blank">
-            <img src="update3.png" alt="Negotiation Update 3" />
-          </a>
-        </details>
-          <summary>June 24, 2025</summary>
-          <a href="update1.png" target="_blank">
-            <img src="update1.png" alt="Negotiation Update 1" />
-          </a>
-        </details>
+  <details>
+    <summary>August 6, 2025</summary>
+    <a href="update3.png" target="_blank">
+      <img src="update3.png" alt="Negotiation Update 3" />
+    </a>
+  </details>
 
-        <details>
-          <summary>July 23-24, 2025</summary>
-          <a href="update2.png" target="_blank">
-            <img src="update2.png" alt="Negotiation Update 2" />
-          </a>
-        </details>
-      </section>
+  <details>
+    <summary>July 23–24, 2025</summary>
+    <a href="update2.png" target="_blank">
+      <img src="update2.png" alt="Negotiation Update 2" />
+    </a>
+  </details>
+
+  <details>
+    <summary>June 24, 2025</summary>
+    <a href="update1.png" target="_blank">
+      <img src="update1.png" alt="Negotiation Update 1" />
+    </a>
+  </details>
+</section>
 
       <section id="faq-section">
         <h2>Frequently Asked Questions</h2>
