--- a/index.html
+++ b/index.html
@@ -102,22 +102,24 @@
     </a>
   </details>
 </section>
+<section id="faq-section">
+  <h2>Frequently Asked Questions</h2>
 
-      <section id="faq-section">
-        <h2>Frequently Asked Questions</h2>
+  <details>
+    <summary>What is a Tentative Agreement?</summary>
+    <p>A Tentative Agreement (TA) is a proposed contract clause that both the union and the employer have agreed on but is not yet ratified by the union membership.</p>
+  </details>
 
-        <details>
-          <summary>What is a Tentative Agreement?</summary>
-          <p>A Tentative Agreement (TA) is a proposed contract clause that both the union and the employer have agreed on but is not yet ratified by the union membership.</p>
-        </details>
+  <details>
+    <summary>What is an MOA?</summary>
+    <p>MOA stands for Memorandum of Agreement. It's a formal, binding agreement between the union and the employer. MOAs can be used to address urgent issues or resolve specific matters before a full contract is finalized or ratified.</p>
+  </details>
 
-        <details>
-          <summary>When is the final contract vote?</summary>
-          <p>The ratification vote will be scheduled after all sections have been tentatively agreed to. Updates will be shared as soon as that happens.</p>
-        </details>
-      </section>
-    </main>
-
+  <details>
+    <summary>When is the final contract vote?</summary>
+    <p>The ratification vote will be scheduled after all sections have been tentatively agreed to. Updates will be shared as soon as that happens.</p>
+  </details>
+</section>
     <footer>
       <div class="container">
         <p>Teamsters Local 2024 · This site tracks tentative agreements and negotiation updates made between Corewell Health East and Teamsters Local 2024.</p>
