--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@
     <summary>What is an MOA?</summary>
     <p>MOA stands for Memorandum of Agreement. It's a formal, binding agreement between the union and the employer. MOAs can be used to address urgent issues or resolve specific matters before a full contract is finalized or ratified.</p>
   </details>
-
+  
+  <details>
+    <summary>an we still submit feedback on the TAs?</summary>
+    <p>Members are encouraged to share feedback with their union stewards or bargaining committee representatives. Your input helps shape the final agreement and future negotiations.</p>
+  </details>
+  
   <details>
     <summary>When is the final contract vote?</summary>
     <p>The ratification vote will be scheduled after all sections have been tentatively agreed to. Updates will be shared as soon as that happens.</p>
@@ -122,7 +127,7 @@
 </section>
     <footer>
       <div class="container">
-        <p>Teamsters Local 2024 · This site tracks tentative agreements and negotiation updates made between Corewell Health East and Teamsters Local 2024.</p>
+        <p>© 2025 Teamsters Local 2024. All rights reserved.</p>
       </div>
     </footer>
   </div>
