--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </details>
   
   <details>
-    <summary>an we still submit feedback on the TAs?</summary>
+    <summary>Can we still submit feedback on the TAs?</summary>
     <p>Members are encouraged to share feedback with their union stewards or bargaining committee representatives. Your input helps shape the final agreement and future negotiations.</p>
   </details>
   
