--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <details id="tentative-agreements" closed>
   <summary class="ta-title">Tentative Agreements</summary>
-
+  
   <div class="ta-article">
     <div class="ta-header">
       <h3>✅ Non-Discrimination</h3>
@@ -117,7 +117,7 @@
   
   <details>
     <summary>Can we still submit feedback on the TAs?</summary>
-    <p>Members are encouraged to share feedback with their union stewards or bargaining committee representatives. Your input helps shape the final agreement and future negotiations.</p>
+    <p>Members are encouraged to share feedback with their union stewards or bargaining committee representatives. Your input helps shape the final agreement and future negotiations. We encourage membership envolvement.</p>
   </details>
   
   <details>
