--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   
   <details>
     <summary>Can we still submit feedback on the TAs?</summary>
-    <p>Members are encouraged to share feedback with their union stewards or bargaining committee representatives. Your input helps shape the final agreement and future negotiations. We encourage membership envolvement.</p>
+    <p>Members are encouraged to share feedback with their union stewards or bargaining committee representatives. Your input helps shape the final agreement and future negotiations. We encourage membership involvement.</p>
   </details>
   
   <details>
