--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
     <summary>What is an MOA?</summary>
     <p>MOA stands for Memorandum of Agreement. It's a formal, binding agreement between the union and the employer. MOAs can be used to address urgent issues or resolve specific matters before a full contract is finalized or ratified.</p>
   </details>
-  
+  <details>
+    
+  <summary>How is a CBA Article different from a hospital policy?</summary>
+  <p>Policies can be changed unilaterally by the employer at any time. A CBA cannot be changed without negotiation and approval from the union. That means your rights and benefits are protected by law, not just management's discretion.</p>
+</details>
   <details>
     <summary>Can we still submit feedback on the TAs?</summary>
     <p>Members are encouraged to share feedback with their union stewards or bargaining committee representatives. Your input helps shape the final agreement and future negotiations. We encourage membership involvement.</p>
