--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
         </div>
       </div>
     </header>
-
+  
+<section id="site-intro">
+  <div class="intro-box">
+    <p>This site is your official source for tracking all Tentative Agreements (TAs) and Negotiation Updates between Corewell Health East and Teamsters Local 2024. As each article of the contract is finalized, it will be posted here. Our goal is transparency—so you can stay informed, see what’s been won, and understand what’s left to bargain.</p>
+  </div>
+</section>
 <details id="tentative-agreements" closed>
   <summary class="ta-title">Tentative Agreements</summary>
   
