--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
       <div class="container header-flex">
         <img src="logo.png" alt="Teamsters Logo" class="logo" />
         <div class="site-info">
-          <h1>Tentative Agreements</h1>
+          <h1>Teamsters Local 2024</h1>
           <p>Corewell Health East & Teamsters Local 2024</p>
+          <p>Tentative Agreements & Updates</p>
+
           <small><strong>Last updated:</strong> August 7, 2025</small>
         </div>
       </div>
