--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container header-flex">
         <img src="logo.png" alt="Teamsters Logo" class="logo" />
         <div class="site-info">
-          <h1>Teamsters Local 2024</h1>
+          <h1>Official Negotiation Updates</h1>
           <p>Corewell Health East & Teamsters Local 2024</p>
           <p>Tentative Agreements & Updates</p>
 
