--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
 <section id="site-intro">
   <div class="intro-box">
-    <p>This site is your official source for tracking all Tentative Agreements (TAs) and Negotiation Updates between Corewell Health East and Teamsters Local 2024. As each article of the contract is finalized, it will be posted here. Our goal is to provide transparency—so you can clearly see the agreements that have been secured and understand their impact.</p>
+    <p>This site is your official source for tracking all Tentative Agreements (TAs) and Negotiation Updates between Corewell Health East and Teamsters Local 2024. As each article of the contract is finalized, it will be posted here. Our goal is to provide transparency. This allows you to clearly see the agreements that have been secured and understand their impact.</p>
   </div>
 </section>
 <details id="tentative-agreements" closed>
