--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   
   <div class="ta-article">
     <div class="ta-header">
-      <h3>✅ Non-Discrimination</h3>
+      <h3>Non-Discrimination</h3>
       <div class="ta-meta">
-        <span>Agreed on: August 6, 2025</span>
+        <span>✅ Agreed on: August 6, 2025</span>
       </div>
     </div>
     <div class="ta-content">
@@ -46,9 +46,9 @@
 
   <div class="ta-article">
     <div class="ta-header">
-      <h3>✅ Recognition</h3>
+      <h3>Recognition</h3>
       <div class="ta-meta">
-        <span>Agreed on: August 6, 2025</span>
+        <span>✅ Agreed on: August 6, 2025</span>
       </div>
     </div>
     <div class="ta-content">
@@ -71,9 +71,9 @@
 
   <div class="ta-article">
     <div class="ta-header">
-      <h3>✅ Union Representatives List</h3>
+      <h3>Union Representatives List</h3>
       <div class="ta-meta">
-        <span>Agreed on: August 6, 2025</span>
+        <span>✅ Agreed on: August 6, 2025</span>
       </div>
     </div>
     <div class="ta-content">
