--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
 </section>
 <details id="tentative-agreements" closed>
   <summary class="ta-title">Tentative Agreements</summary>
+
+    <div class="ta-article">
+    <div class="ta-header">
+      <h3> Agreement</h3>
+      <div class="ta-meta">
+        <span>✅ Agreed on: August 7, 2025</span>
+      </div>
+    </div>
+    <div class="ta-content">
+      <p>
+        This Collective Bargaining Agreement [Agreement] is entered into on _____, 20__ between Corewell Health East [CHE or Hospital] and Teamsters Local 2024 [Teamsters or Union] an affiliate of the International Brotherhood of Teamsters which has delegated to Union authority to bargain this Agreement and represent the CHE registered nurses identified in the Agreement Recognition Article.
+      </p>
+    </div>
+  </div>
   
   <div class="ta-article">
     <div class="ta-header">
