--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
 </section>
 <details id="tentative-agreements" closed>
-  <summary class="ta-title">Tentative Agreements</summary>
+  <summary class="ta-title">✔ Tentative Agreements </summary>
 
     <div class="ta-article">
     <div class="ta-header">
