--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
 <details id="tentative-agreements" closed>
   <summary class="ta-title">✔ Tentative Agreements </summary>
 
+  <div class="ta-article">
+    <div class="ta-header">
+      <h3>Agreement Term</h3>
+      <div class="ta-meta">
+        <span>✅ Agreed on: August 7, 2025</span>
+      </div>
+    </div>
+    <div class="ta-content">
+      <p>
+        This Agreement shall continue in full force and effect from [execution date] through <strong>[three years from execution date]</strong>. If either CHE or the Union wish to terminate, modify or change this Agreement, the respective party shall provide written notice to the other party at least ninety (90) days prior to the Agreement expiration date.
+      </p>
+    </div>
+  </div>
+  
     <div class="ta-article">
     <div class="ta-header">
       <h3> Agreement</h3>
