--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
   </div>
 </section>
 <details id="tentative-agreements" closed>
-  <summary class="ta-title">✔ Tentative Agreements </summary>
+  <summary class="ta-title">
+  <span class="ta-icon">✔</span>
+  <span class="ta-label">Tentative Agreements</span>
+  <span class="ta-arrow">▼</span>
+</summary>
 
   <div class="ta-article">
     <div class="ta-header">
