--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
   <section id="negotiation-updates">
   <h2>Negotiation Updates</h2>
 
+   <details>
+    <summary>August 7, 2025</summary>
+    <a href="update4.png" target="_blank">
+      <img src="update4.png" alt="Negotiation Update 3" />
+    </a>
+  </details>
+    
   <details>
     <summary>August 6, 2025</summary>
     <a href="update3.png" target="_blank">
