--- a/index.html
+++ b/index.html
@@ -113,6 +113,46 @@
     </div>
   </div>
 
+<div class="ta-article">
+  <div class="ta-header">
+    <h3>2025 Economic Agreement</h3>
+    <div class="ta-meta">
+      <span>✅ Agreed on: July 24, 2025</span>
+    </div>
+  </div>
+  <div class="ta-content">
+    <p>
+      Corewell Health East (“Hospital”) and Teamsters Local Union No. 2024 (“Union”) enter into this Memorandum of Agreement (“MOA”) as follows:
+    </p>
+
+    <p>
+      1. In order to expedite the negotiation process between the parties; because the Union has now provided the full 2025 economic proposal to the Hospital; and in order for the Hospital to recognize the bargaining unit employees’ hard work and diligent efforts to serve the Hospital’s patients’ best interests, the Hospital shall implement as soon as reasonably possible the following economic benefits to the Registered Nurses the Union represents retroactive to the dates the Hospital implemented these to non-bargaining unit employees:
+    </p>
+    <ul>
+      <li>a. The March 2025 annual wage increases for eligible employees as defined in the annual wage increase announcements/guidelines as appended hereto;</li>
+      <li>b. The Base Pay Market Review implemented and tier adjustments [if any] for eligible Advanced Practice Providers as defined in the Base Pay Market Review announcements/guidelines as appended hereto;</li>
+      <li>c. The $250.00 Special Appreciation Bonus for eligible employees as defined in the Special Appreciation Bonus announcements/guidelines as appended hereto;</li>
+      <li>d. The premium pay adjustments for eligible employees as defined in the premium pay adjustment announcements/guidelines as appended hereto;</li>
+      <li>e. The Matching Contribution to the 403(b) Retirement Savings Plan for eligible employees as defined in the Matching Contribution to the 403(b) Retirement Savings Plan announcements/guidelines as appended hereto; and</li>
+      <li>f. The parties acknowledge that this MOA includes the Hospital’s commitment to provide to bargaining unit employees any and all future wage, benefit and retirement adjustments provided to non-bargaining unit employees for the 2025 calendar year consistent with any guidelines established or announcements made. The Hospital agrees to provide notice to the Union not less than seven (7) calendar days prior to the implementation of any future wage, benefit and retirement adjustment to non-bargaining unit employees.</li>
+    </ul>
+
+    <p>
+      2. The Hospital certifies that Paragraph 1 a. through e. represents all of the economic increases granted thus far to non-bargaining unit employees including Organ Donor Leave.
+    </p>
+
+    <p>
+      3. The Union recognizes that granting these increases retroactive to the dates they were implemented for non-bargaining unit employees represents an economic impact to the Hospital. Therefore, if the Hospital accepts this MOA, the Union agrees to:
+    </p>
+    <ul>
+      <li>a. Accept the provisions stated in 1 a. through f. above as the entire economic package for the 2025 calendar year. The Union will not request any additional wage or benefit increases during bargaining for 2025 in exchange for this MOA.</li>
+      <li>b. The Union will withdraw with prejudice and take all steps necessary to encourage the NLRB to dismiss with prejudice any and all current unfair labor practice charges related in any way to the items identified in 1 a. through e. above.</li>
+      <li>c. The Union agrees that it will review and evaluate a list which Hospital provides within a reasonable time not to exceed forty-five (45) calendar days after this MOA is executed to confirm that the bargaining unit employees are receiving the proper adjustments consistent with Paragraph 1 a. through f. above. Once the Union has approved the list, Hospital will make payment under paragraph 1 a. above within a reasonable period of time not to exceed forty-five (45) calendar days.</li>
+    </ul>
+  </div>
+</div>
+
+
 </details>
 
   <section id="negotiation-updates">
