--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
 
 <div class="ta-article">
   <div class="ta-header">
+    <div class="ta-label">MOA</div>
     <h3>2025 Economic Agreement</h3>
     <div class="ta-meta">
-      <span>✅ Agreed on: July 24, 2025</span>
+      <span>✅ Agreed on: July 24, 2025</span
     </div>
   </div>
   <div class="ta-content">
