--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
   </div>
 
   <div class="ta-article">
-    <div class="ta-header">
-      <h3>
-        2025 Economic Agreement
-        <span class="ta-badge">MOA</span>
-      </h3>
-      <div class="ta-meta">
-        <span>✅ Agreed on: July 24, 2025</span>
+<div class="ta-header">
+  <h3 class="ta-heading">
+    2025 Economic Agreement
+    <span class="ta-badge">MOA</span>
+  </h3>
+  <div class="ta-meta">
+    <span>✅ Agreed on: July 24, 2025</span
       </div>
     </div>
     <div class="ta-content">
