--- a/index.html
+++ b/index.html
@@ -155,15 +155,75 @@
 
 </details>
 
-<section id="negotiation-updates">
+  <section id="negotiation-updates">
   <h2>Negotiation Updates</h2>
-  <!-- Negotiation update details here -->
+
+   <details>
+    <summary>August 7, 2025</summary>
+    <a href="update4.png" target="_blank">
+      <img src="update4.png" alt="Negotiation Update 3" />
+    </a>
+  </details>
+    
+  <details>
+    <summary>August 6, 2025</summary>
+    <a href="update3.png" target="_blank">
+      <img src="update3.png" alt="Negotiation Update 3" />
+    </a>
+  </details>
+
+  <details>
+    <summary>July 23–24, 2025</summary>
+    <a href="update2.png" target="_blank">
+      <img src="update2.png" alt="Negotiation Update 2" />
+    </a>
+  </details>
+
+  <details>
+    <summary>June 24, 2025</summary>
+    <a href="update1.png" target="_blank">
+      <img src="update1.png" alt="Negotiation Update 1" />
+    </a>
+  </details>
 </section>
-<footer>
-  <div class="container">
-    <p>© 2025 Teamsters Local 2024. All rights reserved.</p>
+<section id="faq-section">
+  <h2>Frequently Asked Questions</h2>
+
+  <details>
+    <summary>What is a Tentative Agreement?</summary>
+    <p>A Tentative Agreement (TA) is a proposed contract clause that both the union and the employer have agreed on but is not yet ratified by the union membership.</p>
+  </details>
+
+  <details>
+    <summary>What is an MOA?</summary>
+    <p>MOA stands for Memorandum of Agreement. It's a formal, binding agreement between the union and the employer. MOAs can be used to address urgent issues or resolve specific matters before a full contract is finalized or ratified.</p>
+  </details>
+  
+  <details>
+  <summary>How is a CBA article different from a hospital policy?</summary>
+  <p>Policies can be changed unilaterally by the employer at any time. A CBA cannot be changed without negotiation and approval from the union. That means your rights and benefits are protected by law, not just management's discretion.</p>
+</details>
+  
+  <details>
+  <summary>Can management change anything once the CBA is in place?</summary>
+  <p>No. Once a CBA is ratified, management must follow it. Any changes require negotiation with the union and agreement by both sides. This prevents sudden cuts to pay, PTO, staffing, health insurance, bonuses, job protections, and other terms and conditions of employment protected under the National Labor Relations Act (NLRA), such as discipline procedures, scheduling, and grievance rights.</p>
+</details>
+  
+  <details>
+    <summary>Can we still submit feedback on the TAs?</summary>
+    <p>Members are encouraged to share feedback with their union stewards or bargaining committee representatives. Your input helps shape the final agreement and future negotiations. We encourage membership involvement.</p>
+  </details>
+  
+  <details>
+    <summary>When is the final contract vote?</summary>
+    <p>The ratification vote will be scheduled after all sections have been tentatively agreed to. Updates will be shared as soon as that happens.</p>
+  </details>
+</section>
+    <footer>
+      <div class="container">
+        <p>© 2025 Teamsters Local 2024. All rights reserved.</p>
+      </div>
+    </footer>
   </div>
-</footer>
-</div>
 </body>
 </html>
