--- a/index.html
+++ b/index.html
@@ -113,16 +113,17 @@
     </div>
   </div>
 
-  <div class="ta-article">
-<div class="ta-header">
-  <h3 class="ta-heading">
-    2025 Economic Agreement
-    <span class="ta-badge">MOA</span>
-  </h3>
-  <div class="ta-meta">
-    <span>✅ Agreed on: July 24, 2025</span
-      </div>
+ <div class="ta-article">
+  <div class="ta-header">
+    <h3 class="ta-heading">
+      2025 Economic Agreement
+      <span class="ta-badge">MOA</span>
+    </h3>
+    <div class="ta-meta">
+      <span>✅ Agreed on: July 24, 2025</span>
     </div>
+  </div>
+  
     <div class="ta-content">
       <p>
         Corewell Health East (“Hospital”) and Teamsters Local Union No. 2024 (“Union”) enter into this Memorandum of Agreement (“MOA”) as follows.
