--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="logo.png" alt="Teamsters Logo" class="logo" />
         <div class="site-info">
           <h1>Official Negotiation Updates</h1>
-          <p>Corewell Health East & Teamsters Local 2024</p>
+          <p>CHE & Teamsters Local 2024</p>
           <p>Tentative Agreements & Updates</p>
           <small><strong>Last updated:</strong> August 7, 2025</small>
         </div>
