--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
 <section id="site-intro">
   <div class="intro-box">
-    <p>This site is your official source for tracking all Tentative Agreements (TAs) and Negotiation Updates between Corewell Health East and Teamsters Local 2024. As each article of the contract is finalized, it will be posted here. Our goal is to provide transparency. This allows you to clearly see the agreements that have been secured and understand their impact.</p>
+    <p>This site is your official source for tracking all Tentative Agreements (TAs) and Negotiation Updates between Corewell Health East and Teamsters Local 2024. As each article of the contract is finalized, it will be posted here. This allows you to clearly see the agreements that have been secured and understand their impact. We remain committed to a transparent and constructive bargaining process and will continue to provide regular updates as negotiations progress.</p>
   </div>
 </section>
 
