--- a/index.html
+++ b/index.html
@@ -187,12 +187,11 @@
   </details>
     
 <section id="public-calendar">
-  <h2>Upcoming Events</h2>
+  <h2>What's next?</h2>
   <iframe 
     src="https://calendar.google.com/calendar/embed?height=400&wkst=1&ctz=America%2FDetroit&showPrint=0&title=Teamsters%20Local%202024&mode=AGENDA&showCalendars=0&src=OTMxNWE2ZDI0ZGRkOGM2NThkMTU3YTFhYjU0YTM3ZTIwOWQ5MjdjNjcwMjc3NDU3NDliODI4NDI0NTJmOTYyNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23D81B60"
     class="calendar-frame">
   </iframe>
-</section>
     
 <section id="faq-section">
   <h2>Frequently Asked Questions</h2>
