--- a/index.html
+++ b/index.html
@@ -159,9 +159,16 @@
   <h2>Negotiation Updates</h2>
 
    <details>
+    <summary>August 8, 2025</summary>
+    <a href="update5.png" target="_blank">
+      <img src="update5.png" alt="Negotiation Update 5" />
+    </a>
+  </details>
+    
+   <details>
     <summary>August 7, 2025</summary>
     <a href="update4.png" target="_blank">
-      <img src="update4.png" alt="Negotiation Update 3" />
+      <img src="update4.png" alt="Negotiation Update 4" />
     </a>
   </details>
     
