--- a/index.html
+++ b/index.html
@@ -159,6 +159,13 @@
   <h2>Negotiation Updates</h2>
 
    <details>
+    <summary>September 17-18, 2025</summary>
+    <a href="update6.png" target="_blank">
+      <img src="update6.png" alt="Negotiation Update 6" />
+    </a>
+  </details>
+    
+   <details>
     <summary>August 8, 2025</summary>
     <a href="update5.png" target="_blank">
       <img src="update5.png" alt="Negotiation Update 5" />
