--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
 <summary class="ta-title">
   <span class="ta-section-title">Tentative Agreements</span>
 </summary>
-
+  <div class="ta-article">
+    <div class="ta-header">
+      <h3>Agreement</h3>
+      <div class="ta-meta">
+        <span>✅ Agreed on: September 18, 2025</span>
+      </div>
+    </div>
+    <div class="ta-content">
+      <p>
+      Local 2024 reached a tentative agreement on a no-strike/no-lockout provision. Under this clause, once a first collective bargaining agreement is ratified by the membership, the union agrees it will not strike, and Corewell Health East agrees it will not lock out employees, for the duration of the contract.
+Until a first contract is reached and ratified, however, Local 2024 retains its full legal rights, including the right to strike.
+      </p>
+    </div>
+  </div>
   <div class="ta-article">
     <div class="ta-header">
       <h3>Agreement Term</h3>
