--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </summary>
   <div class="ta-article">
     <div class="ta-header">
-      <h3>Agreement</h3>
+      <h3>No Strike, No Lockout</h3>
       <div class="ta-meta">
         <span>✅ Agreed on: September 18, 2025</span>
       </div>
