Add negotiation update details for November 2025

--- a/index.html
+++ b/index.html
@@ -170,7 +170,14 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
 
   <section id="negotiation-updates">
   <h2>Negotiation Updates</h2>
-
+    
+   <details>
+    <summary>November 3, 4, & 6, 2025</summary>
+    <a href="update7.png" target="_blank">
+      <img src="update7.png" alt="Negotiation Update 7" />
+    </a>
+  </details>
+    
    <details>
     <summary>September 17-18, 2025</summary>
     <a href="update6.png" target="_blank">
