--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
 
   <section id="negotiation-updates">
   <h2>Negotiation Updates</h2>
+   <details>
+    <summary>November 12, 2025</summary>
+    <a href="update8.png" target="_blank">
+      <img src="update8.png" alt="Negotiation Update 8" />
+    </a>
+  </details>
     
    <details>
     <summary>November 3, 4, & 6, 2025</summary>
